[package]
name = "api3-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9"
# seems anchor build does not support more recent versions due to rustc lagging behind. Need
# to wait for solana to up their rustc version
ethabi = "12.0.0"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }