[package]
name = "api3-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["simple-abi", "recovery"]
#eth = ["ethabi"]
simple-abi = []
recovery = ["libsecp256k1", "getrandom/dummy"]
solana = ["anchor-lang"]

[dependencies]
borsh = "0.9"
ethabi = { version = "17.0.0", optional = true }
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
getrandom = { version = "0.1.16", features = ["dummy"], optional = true }
libsecp256k1 = { version = "0.6.0", optional = true }
anchor-lang = { version = "0.23.0", features = ["init-if-needed"], optional = true }

[dev-dependencies]
hex-literal = "0.3"
ethereum-types = "0.13.1"
libsecp256k1 = "0.6.0"
web3 = "0.18.0"
rand = "0.8.5"